# lab03

./: CMakeLists.txt  main.cpp  temperature.cpp  temperature.h  test_input.cpp
