cmake_minimum_required(VERSION 3.6)
project(lab3)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS -static)
set(SOURCE_FILES main.cpp temperature.cpp)
add_executable(lab3 ${SOURCE_FILES})
add_executable(test_input test_input.cpp temperature.cpp)
enable_testing()
add_test(NAME test_input COMMAND test_input)